{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 877,
  "lineage": "a3a1e199-ff21-c9cf-3458-54db2f0b3fa6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:route-table/rtb-071732b21050ade63",
            "default_route_table_id": "rtb-071732b21050ade63",
            "id": "rtb-071732b21050ade63",
            "owner_id": "538547716265",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d201c3f6d25e05fc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gitbucket-mainRT"
            },
            "tags_all": {
              "Name": "gitbucket-mainRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gitbucket_nat_eip",
            "aws_internet_gateway.gitbucket_igw",
            "aws_nat_gateway.gitbucket-natgw",
            "aws_subnet.gitbucket-publicsubnet-01",
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gitbucket_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee3cecaf01dedd23",
            "association_id": "eipassoc-081deb1a1871b5d2c",
            "domain": "vpc",
            "id": "eipalloc-0ee3cecaf01dedd23",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-09db8f9628141d83d",
            "private_dns": "ip-10-0-1-172.eu-central-1.compute.internal",
            "private_ip": "10.0.1.172",
            "public_dns": "ec2-3-125-139-179.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.139.179",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gitbucket_nat_eip"
            },
            "tags_all": {
              "Name": "gitbucket_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gitbucket_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:internet-gateway/igw-0ddbea99984ff4373",
            "id": "igw-0ddbea99984ff4373",
            "owner_id": "538547716265",
            "tags": {
              "Name": "gitbucket_igw"
            },
            "tags_all": {
              "Name": "gitbucket_igw"
            },
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "dependencies": [
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gitbucket-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee3cecaf01dedd23",
            "association_id": "eipassoc-081deb1a1871b5d2c",
            "connectivity_type": "public",
            "id": "nat-0d201c3f6d25e05fc",
            "network_interface_id": "eni-09db8f9628141d83d",
            "private_ip": "10.0.1.172",
            "public_ip": "3.125.139.179",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003da61821721e0ff",
            "tags": {
              "Name": "gitbucket-natgw"
            },
            "tags_all": {
              "Name": "gitbucket-natgw"
            }
          },
          "dependencies": [
            "aws_eip.gitbucket_nat_eip",
            "aws_internet_gateway.gitbucket_igw",
            "aws_subnet.gitbucket-publicsubnet-01",
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gitbucket-publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:route-table/rtb-006fa89d706429040",
            "id": "rtb-006fa89d706429040",
            "owner_id": "538547716265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ddbea99984ff4373",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gitbucket-publicRT"
            },
            "tags_all": {
              "Name": "gitbucket-publicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gitbucket_igw",
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gitbucket-publicRT-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f6775175481e4f6",
            "route_table_id": "rtb-006fa89d706429040",
            "subnet_id": "subnet-003da61821721e0ff"
          },
          "dependencies": [
            "aws_internet_gateway.gitbucket_igw",
            "aws_route_table.gitbucket-publicRT",
            "aws_subnet.gitbucket-publicsubnet-01",
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gitbucket-publicRT-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bb8b0a6270469d1",
            "route_table_id": "rtb-006fa89d706429040",
            "subnet_id": "subnet-0e91f9c92d96a7f02"
          },
          "dependencies": [
            "aws_internet_gateway.gitbucket_igw",
            "aws_route_table.gitbucket-publicRT",
            "aws_subnet.gitbucket-publicsubnet-02",
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitbucket-appsrv-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:security-group/sg-0ba2d17ca08c0ed49",
            "description": "Security group for GitBucket instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba2d17ca08c0ed49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gitbucket-appsrv-sg",
            "name_prefix": "",
            "owner_id": "538547716265",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitbucket-appsrv-sg"
            },
            "tags_all": {
              "Name": "gitbucket-appsrv-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitbucket-database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:security-group/sg-05b1ad9e224116e92",
            "description": "Security group for MySQL database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b1ad9e224116e92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba2d17ca08c0ed49"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "gitbucket-database-sg",
            "name_prefix": "",
            "owner_id": "538547716265",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitbucket-database-sg"
            },
            "tags_all": {
              "Name": "gitbucket-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gitbucket-appsrv-sg",
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitbucket-appsubnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:subnet/subnet-0b5ef726a398fed60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5ef726a398fed60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "538547716265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitbucket-appsubnet-01"
            },
            "tags_all": {
              "Name": "gitbucket-appsubnet-01"
            },
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "dependencies": [
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitbucket-appsubnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:subnet/subnet-049d5d32002284f85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049d5d32002284f85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "538547716265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitbucket-appsubnet-02"
            },
            "tags_all": {
              "Name": "gitbucket-appsubnet-02"
            },
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "dependencies": [
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitbucket-datasubnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:subnet/subnet-040886ca23acc279b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040886ca23acc279b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "538547716265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitbucket-datasubnet-01"
            },
            "tags_all": {
              "Name": "gitbucket-datasubnet-01"
            },
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "dependencies": [
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitbucket-datasubnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:subnet/subnet-0e2b99ed7c51d7fb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2b99ed7c51d7fb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "538547716265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitbucket-datasubnet-02"
            },
            "tags_all": {
              "Name": "gitbucket-datasubnet-02"
            },
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "dependencies": [
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitbucket-publicsubnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:subnet/subnet-003da61821721e0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003da61821721e0ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "538547716265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitbucket-publicsubnet-01"
            },
            "tags_all": {
              "Name": "gitbucket-publicsubnet-01"
            },
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "dependencies": [
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitbucket-publicsubnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:subnet/subnet-0e91f9c92d96a7f02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e91f9c92d96a7f02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "538547716265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitbucket-publicsubnet-02"
            },
            "tags_all": {
              "Name": "gitbucket-publicsubnet-02"
            },
            "vpc_id": "vpc-0a8d92db9b472f0b7"
          },
          "dependencies": [
            "aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gitbucket_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:vpc/vpc-0a8d92db9b472f0b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0241b1eb59162af64",
            "default_route_table_id": "rtb-071732b21050ade63",
            "default_security_group_id": "sg-08ad54f3e4c352070",
            "dhcp_options_id": "dopt-035a11267ce47a541",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8d92db9b472f0b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071732b21050ade63",
            "owner_id": "538547716265",
            "tags": {
              "Name": "gitbucket_vpc"
            },
            "tags_all": {
              "Name": "gitbucket_vpc"
            }
          }
        }
      ]
    }
  ]
}